# salvo

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  build.sh  rust-toolchain.toml
.github/workflows/: release.yml
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  moka_store.rs  worker_store.rs
crates/core/: Cargo.toml
crates/core/src/: catcher.rs  conn.rs  depot.rs  lib.rs  server.rs  service.rs  writing.rs
crates/core/src/conn/: ctrl.rs  proto.rs
crates/core/src/conn/native_tls/: config.rs
crates/core/src/fs/: named_file.rs
crates/core/src/http/: form.rs  request.rs  response.rs
crates/core/src/http/body/: req.rs
crates/core/src/routing/: flow_ctrl.rs
crates/core/src/test/: response.rs
crates/core/src/test/request/: builder.rs
crates/cors/: Cargo.toml
crates/cors/src/: allow_origin.rs  lib.rs  wildcard_origin.rs
crates/craft/tests/: craft_smoke.rs
crates/csrf/: Cargo.toml
crates/csrf/src/: cookie_store.rs  lib.rs
crates/extra/: Cargo.toml
crates/extra/src/: logging.rs  request_id.rs  size_limiter.rs  timeout.rs
crates/flash/: Cargo.toml
crates/flash/src/: cookie_store.rs
crates/jwt-auth/: Cargo.toml
crates/oapi/: Cargo.toml
crates/oapi-macros/src/: component.rs  operation.rs
crates/oapi-macros/src/operation/: request_body.rs
crates/oapi/src/: rapidoc.rs  redoc.rs  scalar.rs  swagger_ui.rs
crates/oapi/src/extract/payload/: file.rs
crates/oapi/src/openapi/: link.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: hyper_client.rs  lib.rs  reqwest_client.rs
crates/rate-limiter/: Cargo.toml
crates/rate-limiter/src/: lib.rs  quota.rs  worker_store.rs
crates/salvo/: Cargo.toml
crates/serve-static/: Cargo.toml
crates/serve-static/src/: embed.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
salvo-worker/: Cargo.toml
salvo-worker/src/: catch.rs  lib.rs  open_api.rs  response.rs  service.rs
salvo-worker/src/common/: lark.rs  page.rs  random.rs  response.rs  time.rs
salvo-worker/src/common/data/: option.rs
salvo-worker/src/handlers/: elapsed.rs
worker-examples/: .gitignore  Cargo.toml  rust-toolchain.toml
worker-examples/template/: wrangler.toml
worker-examples/template/docs/: open-api.json
worker-examples/template/src/router/: affix_state.rs
