[package]
name = "salvo-csrf"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
CSRF support for salvo web server framework.
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# default = ["cookie-store", "bcrypt-cipher"]
default = [
    "cookie-store",
    # "bcrypt-cipher"
]
full = [
    "cookie-store",
    "session-store",
    "bcrypt-cipher",
    # "bcrypt-cipher",
    "hmac-cipher",
    "aes-gcm-cipher",
    "ccp-cipher",
]
cookie-store = ["salvo_core/cookie", "dep:cookie"]
session-store = ["dep:salvo-session"]
bcrypt-cipher = ["dep:bcrypt"]
hmac-cipher = ["dep:hmac", "dep:sha2"]
aes-gcm-cipher = ["dep:aead", "dep:aes-gcm"]
ccp-cipher = ["dep:aead", "dep:chacha20poly1305"]

[dependencies]
aead = { workspace = true, optional = true }
aes-gcm = { workspace = true, optional = true }
base64 = { workspace = true }
bcrypt = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
cookie = { workspace = true, features = [
    "percent-encode",
    "signed",
    # "signed",
], optional = true }
hmac = { workspace = true, optional = true }
rand = { workspace = true }
tracing = { workspace = true }
salvo_core = { workspace = true, default-features = false }
salvo-session = { workspace = true, optional = true } # 也使用了 getrandom
serde_json = { workspace = true }
sha2 = { workspace = true, optional = true }

getrandom_v2 = { package = "getrandom", version = "0.2.17", features = ["js"] }
getrandom = { workspace = true, features = [
    "wasm_js",
] } # ! build with -> RUSTFLAGS='--cfg getrandom_backend="wasm_js"'
worker = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
salvo_core = { workspace = true, features = ["test"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# [lib]
# crate-type = ["cdylib"]
