[package]
name = "salvo-serve-static"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Serve static assets for salvo web server framework.
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full = ["embed"]
embed = ["dep:rust-embed", "dep:hex"]

[dependencies]
hex = { workspace = true, optional = true }
mime = { workspace = true }
mime-infer = { workspace = true }
path-slash = { workspace = true }
percent-encoding = { workspace = true }
rust-embed = { workspace = true, optional = true }
salvo_core = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting", "macros", "serde"] }
tracing = { workspace = true }
tokio = { workspace = true }

worker = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[dev-dependencies]
salvo_core = { workspace = true, features = ["test"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# [lib]
# crate-type = ["cdylib"]
